--- a/eJournal/src/main/resources/static/CSS/styles.css
+++ b/eJournal/src/main/resources/static/CSS/styles.css
@@ -119,3 +119,13 @@ body {
     width: 100%;
     text-align: center;
 }
+.btn-group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 10px;
+}
+
+.btn-row {
+    margin-bottom: 5px;
+}
