--- a/eJournal/src/main/resources/templates/tableschedule.html
+++ b/eJournal/src/main/resources/templates/tableschedule.html
@@ -12,33 +12,49 @@
     <div class="container mt-4">
         <h1 class="text-center mb-4">Расписание</h1>
         <a href="/schedule/newschedule" class="btn btn-primary mb-2">Добавить предмет в расписание</a>
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Время</th>
-                <th th:each="day : ${days}" th:text="${day}"></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="time : ${times}">
-                <th th:text="${time}"></th>
-                <td th:each="day : ${days}">
-                    <div th:each="schedule : ${schedules}"
-                         th:if="${schedule.dayOfWeek} == ${day} and ${schedule.time} == ${time}">
-                        <div th:text="${schedule.subject}"></div>
-                        <div th:text="${schedule.groupNumber}"></div>
-                        <div th:text="${schedule.teacherName}"></div>
-                        <div class="btn-group">
-                            <a class="btn btn-sm btn-primary"
-                               th:href="@{/schedule/editschedule/{id}(id=${schedule.id})}">Редактировать</a>
-                            <a class="btn btn-sm btn-danger"
-                               th:href="@{/schedule/deleteschedule/{id}(id=${schedule.id})}">Удалить</a>
+        <form th:action="@{/tablestudents}" method="get" class="mb-3">
+            <label for="groupFilter">Фильтр по группе:</label>
+            <select class="form-select" id="groupFilter" name="groupNumber">
+                <option value="">Все группы</option>
+                <option th:each="group : ${groups}" th:value="${group.groupNumber}"
+                        th:text="${group.groupNumber}"></option>
+            </select>
+            <button type="submit" class="btn btn-primary mt-2">Применить фильтр</button>
+        </form>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Время</th>
+                    <th th:each="day : ${days}" th:text="${day}"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="time : ${times}">
+                    <th th:text="${time}"></th>
+                    <td class="align-center" th:each="day : ${days}">
+                        <div th:each="schedule : ${schedules}"
+                             th:if="${schedule.dayOfWeek} == ${day} and ${schedule.time} == ${time}">
+                            <div th:text="${schedule.subject}"></div>
+                            <div th:text="${schedule.groupNumber}"></div>
+                            <div th:text="${schedule.teacherName}"></div>
+                            <div>
+                                <div>
+                                    <a class="btn btn-sm btn-primary"
+                                       th:href="@{/schedule/editschedule/{id}(id=${schedule.id})}">Редактировать</a>
+                                </div>
+                                <div>
+                                    <a class="btn btn-sm btn-danger"
+                                       th:href="@{/schedule/deleteschedule/{id}(id=${schedule.id})}">Удалить</a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 </body>
