--- a/eJournal/src/main/resources/templates/tablestudents.html
+++ b/eJournal/src/main/resources/templates/tablestudents.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студенты</title>
+    <title>Пользователи</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}"/>
 </head>
@@ -11,7 +11,7 @@
 <div th:insert="blocks/sidebar :: sidebar"></div>
 <div class="main">
     <div class="container">
-        <h1 class="my-3">Список студентов</h1>
+        <h1 class="my-3">Список пользователей</h1>
         <a href="/newuser" class="btn btn-primary mb-2">Добавить нового пользователя</a>
         <form method="get" action="/tablestudents">
             <div class="form-group">
@@ -22,6 +22,8 @@
                             th:text="${group.groupNumber}"></option>
                 </select>
             </div>
+            <br>
+
             <div class="form-group">
                 <label for="role">Выберите роль:</label>
                 <select id="role" name="role" class="form-control">
@@ -31,9 +33,9 @@
                     <option value="TEACHER">Преподаватель</option>
                 </select>
             </div>
+            <br>
             <button type="submit" class="btn btn-primary">Применить фильтр</button>
         </form>
-
         <table class="table table-striped my-3">
             <thead>
             <tr>
@@ -46,7 +48,6 @@
                 <th>Номер группы</th>
                 <th>Имя</th>
                 <th>Фамилия</th>
-                <th>Предмет</th>
                 <th>Действия</th>
             </tr>
             </thead>
@@ -61,7 +62,6 @@
                 <td th:text="${user.groupNumber}"></td>
                 <td th:text="${user.name}"></td>
                 <td th:text="${user.surname}"></td>
-                <td th:text="${user.subject}"></td>
                 <td>
                     <a th:href="@{'/edit-user/' + ${user.id}}" class="btn btn-sm btn-primary">Редактировать</a>
                     <a th:href="@{'/delete-user/' + ${user.id}}" class="btn btn-sm btn-danger">Удалить</a>
